--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,15 +25,16 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.3.0'
-    compile 'com.google.android.gms:play-services:10.2.1'
-    compile 'com.android.support:cardview-v7:25.3.0'
-    compile 'com.android.support:design:25.3.0'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.google.android.gms:play-services:11.0.4'
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
     testCompile 'junit:junit:4.12'
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.mapzen:mapzen-android-sdk:1.3.2'
     compile 'com.android.support:multidex:1.0.1'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+    compile 'com.valdesekamdem.library:md-toast:0.9.0'
 
 
 }
