--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    buildToolsVersion '25.0.3'
     defaultConfig {
         applicationId "com.pwr.routing"
         minSdkVersion 19
@@ -14,10 +14,12 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
@@ -25,16 +27,25 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    testCompile('junit:junit:4.12') {
+        exclude group: 'org.apache.commons', module: 'commons-io'
+    }
+    compile('com.mapzen:mapzen-android-sdk:1.3.2') {
+        exclude group: 'org.apache.commons', module: 'commons-io'
+    }
+
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
     compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:mediarouter-v7:25.3.1'
     compile 'com.google.android.gms:play-services:11.0.4'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
-    testCompile 'junit:junit:4.12'
     compile 'com.jakewharton:butterknife:6.1.0'
-    compile 'com.mapzen:mapzen-android-sdk:1.3.2'
+    compile 'commons-io:commons-io:1.3.2'
     compile 'com.android.support:multidex:1.0.1'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
     compile 'com.valdesekamdem.library:md-toast:0.9.0'
-
-
+    compile 'com.google.firebase:firebase-core:10.0.1'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
