--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,12 +14,12 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
+    productFlavors {
+    }
 }
 
 dependencies {
@@ -33,8 +33,7 @@ dependencies {
     compile('com.mapzen:mapzen-android-sdk:1.3.2') {
         exclude group: 'org.apache.commons', module: 'commons-io'
     }
-
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+    compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:mediarouter-v7:25.3.1'
     compile 'com.google.android.gms:play-services:11.0.4'
