--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.3'
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.pwr.routing"
-        minSdkVersion 19
-        targetSdkVersion 25
-        versionCode 3
-        versionName "1.03"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        minSdkVersion 24
+        targetSdkVersion 27
+        versionCode 5
+        versionName "1.05"
         multiDexEnabled true
     }
     buildTypes {
@@ -24,26 +23,24 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    testCompile('junit:junit:4.12') {
-        exclude group: 'org.apache.commons', module: 'commons-io'
-    }
-    compile('com.mapzen:mapzen-android-sdk:1.3.2') {
-        exclude group: 'org.apache.commons', module: 'commons-io'
-    }
-    compile 'com.google.code.gson:gson:2.8.0'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:mediarouter-v7:25.3.1'
+
+    compile 'com.google.code.gson:gson:2.8.2'
+    compile 'com.android.support:appcompat-v7:27.1.1'
+    compile 'com.android.support:mediarouter-v7:27.1.1'
+    //noinspection GradleDependency,UseOfBundledGooglePlayServices
     compile 'com.google.android.gms:play-services:11.0.4'
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.jakewharton:butterknife:6.1.0'
-    compile 'commons-io:commons-io:1.3.2'
-    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support:cardview-v7:27.1.1'
+    compile 'com.android.support:design:27.1.1'
+    compile 'com.jakewharton:butterknife:8.8.1'
+    compile 'commons-io:commons-io:2.4'
+    compile 'com.android.support:multidex:1.0.3'
     compile 'com.valdesekamdem.library:md-toast:0.9.0'
-    compile 'com.google.firebase:firebase-core:10.0.1'
+    //noinspection GradleDependency
+    compile 'com.google.firebase:firebase-core:11.0.4'
+
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:5.5.1'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation:0.12.0'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.12.0'
 }
 
 
