--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.firebase.firebase-crash'
 
 android {
     compileSdkVersion 27
@@ -22,21 +23,20 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-    compile 'com.google.code.gson:gson:2.8.2'
-    compile 'com.android.support:appcompat-v7:27.1.1'
-    compile 'com.android.support:mediarouter-v7:27.1.1'
-    //noinspection GradleDependency,UseOfBundledGooglePlayServices
-    compile 'com.google.android.gms:play-services:11.0.4'
-    compile 'com.android.support:cardview-v7:27.1.1'
-    compile 'com.android.support:design:27.1.1'
-    compile 'com.jakewharton:butterknife:8.8.1'
-    compile 'commons-io:commons-io:2.4'
-    compile 'com.android.support:multidex:1.0.3'
-    compile 'com.valdesekamdem.library:md-toast:0.9.0'
-    //noinspection GradleDependency
-    compile 'com.google.firebase:firebase-core:11.0.4'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:mediarouter-v7:27.1.1'
+    implementation 'com.google.android.gms:play-services-location:15.0.0'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    implementation 'commons-io:commons-io:2.4'
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.valdesekamdem.library:md-toast:0.9.0'
+    implementation 'com.google.firebase:firebase-core:15.0.0'
+    implementation 'com.google.firebase:firebase-crash:15.0.0'
 
     implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:5.5.1'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation:0.12.0'
