--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,13 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:15.0.0'
     implementation 'com.google.firebase:firebase-crash:15.0.0'
 
-    implementation 'com.mapbox.mapboxsdk:mapbox-android-sdk:5.5.1'
-    implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation:0.12.0'
-    implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.12.0'
+    implementation ('com.mapbox.mapboxsdk:mapbox-android-sdk:6.0.1@aar') {
+        transitive = true
+    }
+    implementation ('com.mapbox.mapboxsdk:mapbox-android-navigation:0.12.0')
+    implementation ('com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.12.0') {
+        transitive = true
+    }
 }
 
 
