--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,9 +41,11 @@ dependencies {
     implementation ('com.mapbox.mapboxsdk:mapbox-android-sdk:6.0.1@aar') {
         transitive = true
     }
-    implementation ('com.mapbox.mapboxsdk:mapbox-android-navigation:0.12.0')
-    implementation ('com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.12.0') {
+    compile ('com.mapbox.mapboxsdk:mapbox-android-navigation:0.12.0')
+    compile ('com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.12.0') {
+        exclude group: 'android.arch.lifecycle'
         transitive = true
+
     }
 }
 
