--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,16 +37,14 @@ dependencies {
     implementation 'com.valdesekamdem.library:md-toast:0.9.0'
     implementation 'com.google.firebase:firebase-core:15.0.0'
     implementation 'com.google.firebase:firebase-crash:15.0.0'
-
-    implementation ('com.mapbox.mapboxsdk:mapbox-android-sdk:6.0.1@aar') {
+    implementation ('com.mapbox.mapboxsdk:mapbox-android-sdk:6.0.1') {
         transitive = true
     }
-    compile ('com.mapbox.mapboxsdk:mapbox-android-navigation:0.12.0')
-    compile ('com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.12.0') {
+    implementation ('com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.12.0') {
         exclude group: 'android.arch.lifecycle'
         transitive = true
-
     }
+    implementation "android.arch.lifecycle:extensions:1.1.1"
 }
 
 
