--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.google.firebase.firebase-crash'
 
 android {
     compileSdkVersion 27
@@ -20,32 +19,36 @@ android {
     }
     productFlavors {
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-    implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:mediarouter-v7:27.1.1'
-    implementation 'com.google.android.gms:play-services-location:15.0.0'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.jakewharton:butterknife:8.8.1'
     implementation 'commons-io:commons-io:2.4'
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.valdesekamdem.library:md-toast:0.9.0'
-    implementation 'com.google.firebase:firebase-core:15.0.0'
-    implementation 'com.google.firebase:firebase-crash:15.0.0'
-    implementation ('com.mapbox.mapboxsdk:mapbox-android-sdk:6.0.1') {
+    implementation 'com.google.firebase:firebase-core:15.0.2'
+    implementation 'com.google.firebase:firebase-crash:15.0.2'
+    implementation 'com.google.android.gms:play-services-location:15.0.0'
+    implementation ('com.mapbox.mapboxsdk:mapbox-android-sdk:6.1.1@aar') {
         transitive = true
     }
-    implementation ('com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.12.0') {
-        exclude group: 'android.arch.lifecycle'
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-navigation:0.13.0'
+    implementation ('com.mapbox.mapboxsdk:mapbox-android-navigation-ui:0.13.0') {
         transitive = true
     }
-    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-locationlayer:0.6.0-SNAPSHOT'
 }
 
 
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.firebase-crash'
